# DoraemonsPocket

./: README.md
OTL封装/: README.md  SqlServer与Otl类型对照表.txt  example.cpp  ezotl.h  otl_header.h  simple_time.h
OpenCV渲染灰度图/: render.cpp
Protobuf写文件(C++)/: README.md  ee.pb.cc  ee.pb.h  ee.proto  main.cpp  test.json  test_region.pbf
Python/: 配置.txt
centos/: centos7.3 配置备忘.txt
mbtile_merge/: CMakeLists.txt  README.md  main.cpp  mapbox_tile_sets.cpp  mapbox_tile_sets.hpp  param.json
mbtile_merge/data/: areadxskwuwanhunan.mbtiles  areaxxskwuwanhunan.mbtiles  areazxskwuwanhunan.mbtiles  point_culvert_s5000.mbtiles  point_daminfo_s5000.mbtiles
pdf文件去水印/: CMakeLists.txt  PdfContentsGraph.h  test.cpp
potrace位图轮廓矢量化算法/: CMakeLists.txt  CMakeSettings.json  auxiliary.h  backend_geojson.cpp  backend_geojson.h  bbox.cpp  bitmap_io.cpp  bitops.h  curve.cpp  decompose.cpp  example.cpp  flate.cpp  greymap.cpp  lzw.cpp  platform.h  potrace.7z  potracelib.cpp  progress_bar.cpp  render.cpp  test.geojson  trace.cpp  trans.cpp  说明文档.md
triangle/: CMakeLists.txt
visual 远程centos调试配置/: CMakeSettings.json
列出Vcpkg的库和描述/: Vcpkg的库和描述.cpp
根据矢量构建掩膜图像/: main.cpp
泰森多边形构建及切割/: jc_voronoi.h  simple.cpp
矢量地图录入数据库/: main.cpp
