cmake_minimum_required(VERSION 3.15)
set(VCPKG_TOOLCHAIN_FILE $ENV{VCPKG_ROOT})
string(REPLACE "\\" "/" VCPKG_TOOLCHAIN_FILE "${VCPKG_TOOLCHAIN_FILE}")
set(VCPKG_TOOLCHAIN_FILE "${VCPKG_TOOLCHAIN_FILE}/scripts/buildsystems/vcpkg.cmake")
message(STATUS "VCPKG_TOOL: ${VCPKG_TOOLCHAIN_FILE}")
set(CMAKE_TOOLCHAIN_FILE ${VCPKG_TOOLCHAIN_FILE})

set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
project("PdfTool")

set(CMAKE_CXX_STANDARD 17)
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)
#find_package(PoDoFo CONFIG REQUIRED)
#find_package(Boost REQUIRED graph)
find_path(MUPDF_INCLUDE "mupdf/pdf.h")
include_directories(${MUPDF_INCLUDE})
   
add_executable(${PROJECT_NAME} test.cpp)
#target_link_libraries(${PROJECT_NAME} podofo_shared)
#target_link_libraries(${PROJECT_NAME} Boost::boost Boost::graph )
message("${VCPKG_INSTALLED_DIR}/x64-windows/debug/lib/libmupdfd.lib")
target_link_libraries(${PROJECT_NAME} "${VCPKG_INSTALLED_DIR}/x64-windows/debug/lib/libmupdfd.lib" )